# Omega-game

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  MODERNIZATION_PLAN.md  SPELL_AUDIT.md  buglist.txt  clippy.toml  rustfmt.toml
.config/: nextest.toml
crates/omega-bevy/: Cargo.toml
crates/omega-bevy/src/: lib.rs
crates/omega-bevy/src/presentation/: animation.rs  arena_controls.rs  bevy_theme.rs  color_adapter.rs  cursor_grid.rs  editor.rs  hud.rs  input.rs  inspector.rs  interaction.rs  mod.rs  overlays.rs  scene.rs  spawner.rs  targeting.rs  theme.rs  tilemap.rs  timeline.rs
crates/omega-bevy/src/simulation/: diagnostics.rs  emitters.rs  mod.rs  particles.rs  plugin.rs  projectiles.rs  random.rs  safety.rs  systems.rs  turret.rs
crates/omega-tools/: Cargo.toml
crates/omega-tools/fixtures/replay/: combat_defeat_monster.json  movement_blocked_wall.json  p5_city_service_social.json  p5_countryside_hunt_travel.json  p6_progression_wizard_branch.json  p6_quest_social_branch.json  pickup_drop_cycle.json  r3_site_arena.json  r3_site_bank.json  r3_site_castle_talk.json  r3_site_charity.json  r3_site_college.json  r3_site_merc_guild.json  r3_site_order_talk.json  r3_site_shop.json  r3_site_sorcerors.json  r3_site_temple.json
crates/omega-tools/fixtures/replay/matrix/: matrix_attack_miss_000.json  matrix_attack_miss_001.json  matrix_attack_miss_002.json  matrix_attack_miss_003.json  matrix_attack_miss_004.json  matrix_attack_miss_005.json  matrix_attack_miss_006.json  matrix_attack_miss_007.json  matrix_attack_miss_008.json  matrix_attack_miss_009.json  matrix_attack_miss_010.json  matrix_attack_miss_011.json  matrix_attack_miss_012.json  matrix_attack_miss_013.json  matrix_attack_miss_014.json  matrix_attack_miss_015.json  (+628 more)
crates/omega-tools/fixtures/save-compat/: v0_envelope_wrapped.json  v0_raw_state.json  v1_envelope.json
crates/omega-tools/fuzz-corpus/content-map/: invalid_width.map  valid_v2_min.map
crates/omega-tools/fuzz-corpus/save-json/: invalid_truncated.json  v1_minimal.json
crates/omega-tools/src/: audit_contract.rs  lib.rs  mechanics_shared.rs  replay.rs
crates/omega-tui/: Cargo.toml
crates/omega-tui/src/: arena.rs  color_adapter.rs  lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_content_map_parser.rs  fuzz_save_decode.rs
(+225 files in other folders)
